# instituto-crewai

./: .env.exemplo  .gitignore  .pre-commit-config.yaml  README.md  my_flow_plot.html  pyproject.toml
instituto_crewai/: cli.py  main.py
instituto_crewai/agentes/: __init__.py  agente.py  escritor.py  fotografo.py  gerente.py  pesquisador.py  planejador.py
instituto_crewai/brian_consultor/: brian_consultor_cli.py
instituto_crewai/brian_consultor/flow/: brian_consultor_execucao.py  brian_consultor_flows.py
instituto_crewai/config/: .env.exemplo  agents.yaml  tasks.yaml
instituto_crewai/core_concepts/flows/: getting_started.py  logica_or.py  state_estruturado.py  state_nao_estruturado.py
instituto_crewai/crews/: __init__.py  campanha_crew.py  curso_1.py  equipe.py  instagram_crew.py  instragram_crew.py  suporte_consumidor_crew.ipynb
instituto_crewai/crews/campanha/: campanha_crew.py  campanha_main.py
instituto_crewai/crews/notebook/: campanha_crew.ipynb
instituto_crewai/crews/pesquisa_redacao/: 1.md  2.md  Redação Sobre: Buracos Negros Super Masivos - 1.md  Redação Sobre: Buracos Negros Super Masivos - 2.md  Redação Sobre: Buracos Negros Super Masivos.md
instituto_crewai/crews/play_ground/: interpretacao_crew_2.py  roteiristas_crew.py
instituto_crewai/crews/post_marketing/: crew.py  post_marketing.py
instituto_crewai/equipes/multiplicadora/: README.md  multiplicadora_app.py
instituto_crewai/equipes/organizar/: interpretacao_crew_1.py
instituto_crewai/equipes/streamlit_template/: streamlit_app.py
instituto_crewai/equipes/tradutora_artigo/: equipe.py
instituto_crewai/knowledge/: definicao_consorcios.md  definicao_zenity_voyages.md
instituto_crewai/llms/: __init__.py  gemini.py  groq.py  llm.py  llm_manager.py
instituto_crewai/play_ground/: classificacao_roteiros_crew.py  equipes.md  interpretacao_crew.py  interpretacao_crew_2.py  pipeline.md  roteiristas_crew.py
instituto_crewai/tasks/: __init__.py  criacao_imagem_task.py  escrita_task.py  pesquisa_task.py  plano_task.py  revisao_task.py  task.py
instituto_crewai/tools/: __init__.py
instituto_crewai/tools/scraping/: __init__.py  (+4 more)
instituto_crewai/utils/: environment.py  llm_models.py
instituto_crewai/zenith_voyages/: clientes.md  site_app.py  sobre.md
src/instituto_crewai/: main.py  main_cli.py  main_streamlit.py  run_streamlit.py
utils/: __init__.py  environment.py  file_operations.py
utils/llms/: __init__.py  gemini.py
(+117 files in other folders)
